# miniprova

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240331230530_create_user_table.sql  20240401001246_create_class_table.sql  20240402001505_create_class_student_table.sql  20240402220508_create_exam_table.sql  20240409023125_create-student-answers.sql
src/: main.rs
src/auth/: controller.rs  service.rs
src/class/: controller.rs  model.rs  repository.rs  service.rs
src/exam/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/infra/: db.rs
src/middleware/: auth.rs
src/student/: controller.rs  service.rs
src/teacher/: controller.rs
src/user/: controller.rs  model.rs  repository.rs  service.rs
src/utils/: env.rs  mod.rs
src/view/: login.jinja  me.jinja  mod.rs
src/view/exam/: create.jinja
src/view/student/: exam.jinja  exam_result.jinja  home.jinja
src/view/teacher/: edit-exam.jinja  exam_result.jinja  home.jinja  list-exam.jinja
src/view/user/: me.jinja
