[package]
name = "mini-prova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["form"]}
chrono = "0.4.37"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
minijinja = { version = "1.0.12", features = ["builtins"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "chrono"]}
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
